[project]
name = "tgext.tw2"
version = "0.1"
authors = [
    {name = "Alessandro Molina", email = "amol@turbogears.org"},
]
description = "Enable support for ToscaWidgets2 form and validation library"
readme = "README.md"
keywords = ["turbogears2.extension"]
requires-python = ">= 3.7"
dependencies = [
  "tw2.core",
  "TurboGears2"
]
